--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["Alexander Lyotov <sippie84@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+Django = "^4.1.2"
+djangorestframework = "^3.14.0"
 
 [tool.poetry.dev-dependencies]
 
