--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Alexander Lyotov <sippie84@gmail.com>"]
 python = "^3.9"
 Django = "^4.1.2"
 djangorestframework = "^3.14.0"
+django-filter = "^22.1"
 
 [tool.poetry.dev-dependencies]
 
