--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^4.1.2"
 djangorestframework = "^3.14.0"
 django-filter = "^22.1"
 psycopg2-binary = "^2.9.5"
+drf-yasg = "^1.21.4"
 
 [tool.poetry.dev-dependencies]
 
