--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,9 @@ services:
   backend:
     build: ./backend
     restart: always
-    command: python manage.py runserver 0.0.0.0:7000
+    command: python manage.py runserver 0.0.0.0:8000
     ports:
-      - "7000:7000"
+      - "8000:8000"
     depends_on:
       - postgres
     env_file:
@@ -26,30 +26,16 @@ services:
     networks:
       - musicalbumguide_network
 
-  nginx:
-    image: nginx:1.21.3-alpine
+  frontend:
+    build: ./frontend
     restart: always
+    command: python manage.py runserver 0.0.0.0:7000
     ports:
-      - "80:80"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - backend
+      - "7000:7000"
+    env_file:
+      - .env
     networks:
       - musicalbumguide_network
-  
-  # frontend:
-  #   build: ./frontend
-  #   restart: always
-  #   command: python main.py
-  #   depends_on:
-  #     - nginx
-  #   ports:
-  #     - "8000:8000"
-  #   env_file:
-  #     - .env
-  #   networks:
-  #     - musicalbumguide_network
 
 volumes:
   postgres_data:
