--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -19,4 +19,4 @@ COPY . /app
 # run entrypoint.sh
 ENTRYPOINT ["/app/entrypoint.sh"]
 
-CMD ["gunicorn", "frontend.wsgi:application", "--bind", "0:8000" ] 
+CMD ["python", "manage.py", "runserver", "0.0.0.0:7000"]
