--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,31 +14,48 @@ services:
   backend:
     build: ./backend
     restart: always
-    command: python manage.py runserver 0.0.0.0:8000
-    ports:
-      - "8000:8000"
+    command: gunicorn backend.wsgi:application --bind 0.0.0.0:8000
+    expose:
+      - 8000
     depends_on:
       - postgres
     env_file:
       - .env
     volumes:
       - ./source_data:/app/core/management/commands/source_data
+      - static_value:/app/backend/static/
     networks:
       - musicalbumguide_network
 
   frontend:
     build: ./frontend
     restart: always
-    command: python manage.py runserver 0.0.0.0:7000
-    ports:
-      - "7000:7000"
+    command: gunicorn frontend.wsgi:application --bind 0.0.0.0:7000
+    expose:
+      - 7000
     env_file:
       - .env
+    volumes:
+      - static_value:/app/frontend/static/
+    networks:
+      - musicalbumguide_network
+
+  nginx:
+    image: nginx:1.21.3-alpine
+    restart: always
+    ports:
+      - "1337:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - static_value:/var/html/static/
+    depends_on:
+      - frontend
     networks:
       - musicalbumguide_network
 
 volumes:
   postgres_data:
+  static_value:
 
 networks:
   musicalbumguide_network:
