--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ djangorestframework = "^3.14.0"
 django-filter = "^22.1"
 psycopg2-binary = "^2.9.5"
 drf-yasg = "^1.21.4"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
