--- a/frontend/pyproject.toml
+++ b/frontend/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 Django = "^4.1.2"
 httpx = "^0.23.0"
 djangorestframework = "^3.14.0"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
