feature/frontend collectstatic target

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -3,4 +3,7 @@ include ../.local.env
 export
 
 runserver:
-	poetry run python manage.py runserver localhost:8000
+	poetry run python manage.py runserver localhost:7000
+
+collectstatic:
+	poetry run python manage.py collectstatic
