--- a/frontend/pyproject.toml
+++ b/frontend/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^4.1.2"
 httpx = "^0.23.0"
 djangorestframework = "^3.14.0"
 gunicorn = "^20.1.0"
+wemake-python-styleguide = "^0.17.0"
 
 [tool.poetry.dev-dependencies]
 
