--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ COPY pyproject.toml poetry.lock /app/
 RUN pip install --upgrade pip && \
     pip install "poetry==1.2.0" && \
     poetry config virtualenvs.create false && \
-    poetry install
+    poetry install --no-dev
     
 COPY . .
 
