--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,8 @@ drf-yasg = "^1.21.4"
 gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
+wemake-python-styleguide = "^0.17.0"
+mypy = "^0.982"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
