feature/backend flake8 exclude migrations

--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -1,4 +1,6 @@
 [flake8]
+exclude =
+    migrations
 ignore =
     C818, # trailing comma on bare tuple prohibited
     D100, # missing module docstring
@@ -34,6 +36,7 @@ ignore =
     WPS531, # false-positive: simplified if return
     D400, # First line should end with a period
     WPS407, # Found mutable module constan
+    WPS221, # Found line with high Jones Complexity: 18 > 14
 
 max-arguments = 16
 max-module-members = 12
