--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,12 @@ services:
       - .env
     networks:
       - musicalbumguide_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready", "-d", "db_prod"]
+      interval: 10s
+      timeout: 60s
+      retries: 10
+      start_period: 80s  
 
   backend:
     build: ./backend
@@ -18,7 +24,8 @@ services:
     expose:
       - 8000
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     env_file:
       - .env
     volumes:
