feature/default.env update

--- a/default.env
+++ b/default.env
@@ -12,10 +12,10 @@ DB_HOST=postgres
 DB_PORT=5432
 DB_NAME=postgres
 DB_USER=postgres
-DB_PASSWORD=agW1q0jty&
+DB_PASSWORD=[password]
 
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=agW1q0jty&
+POSTGRES_PASSWORD=[password]
 
 FRONTEND_HOST=frontend
 FRONTEND_PORT=7000
